sketch out auth and submission of github issue

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-	"username": "oonibot",
-	"password": "changeme"
+	"token": "-get from github.com/settings/tokens-",
+	"user": "oonibot",
+	"repo": "thetorproject/ooni-probe"
 }
