--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.6",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
-    "github": "^2.1.0"
+    "github": "^2.1.0",
+    "pug": "^2.0.0-beta3"
   }
 }
