Add URL to created issue, fix body of response

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"token": "-get from github.com/settings/tokens-",
-	"user": "oonibot",
-	"repo": "thetorproject/ooni-probe",
-	"secret": "My secret"
+	"secret": "My secret",
+	"user": "ooni-bot",
+	"repo": "thetorproject/ooni-probe"
 }
